lang2/macro/tests/ui/fail/02-missing-constructor.stderr
error: ink! contracts require at least one `#[ink(constructor)]`
  --> $DIR/02-missing-constructor.rs:6:1
   |
6  | / mod noop {
7  | |     #[ink(storage)]
8  | |     struct Noop {}
9  | |
...  |
13 | |     }
14 | | }
   | |_^
